[project]
name = "probely-cli"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "João Silva", email = "joao.silva@probely.com" }
]
dependencies = [
    "requests>=2.31.0",
    "typer>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "probely_cli:hello"
list = "probely_cli:list_targets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.1",
]

[tool.rye.scripts]
shell = { cmd = ". .venv/bin/activate" } # doenst work, permission denied

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/probely_cli"]
