[project]
name = "probely_cli"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "João Silva", email = "joao.silva@probely.com" }
]
# TODO
#license = {file = "LICENSE.txt"}
## https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#keywords
#keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
## https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
#classifiers = [
#  # How mature is this project? Common values are
#  #   3 - Alpha
#  #   4 - Beta
#  #   5 - Production/Stable
#  "Development Status :: 4 - Beta",
#
#  # Indicate who your project is intended for
#  "Intended Audience :: Developers",
#  "Topic :: Software Development :: Build Tools",
#
#  # Pick your license as you wish (see also "license" above)
#  "License :: OSI Approved :: MIT License",
#
#  # Specify the Python versions you support here.
#  "Programming Language :: Python :: 3",
#  "Programming Language :: Python :: 3.6",
#  "Programming Language :: Python :: 3.7",
#  "Programming Language :: Python :: 3.8",
#  "Programming Language :: Python :: 3.9",
#  "Programming Language :: Python :: 3.10",
#  "Programming Language :: Python :: 3.11",
#  "Programming Language :: Python :: 3.12",
#]

readme = "README.md"
requires-python = ">= 3.8"

dependencies = [
    "requests",
    "rich", # TODO: is this still required?
    "rich-argparse", #TODO: is this still required?
    "environs",
    "marshmallow",
    "pyyaml",
    "mergedeep"
]

[project.optional-dependencies]
test = [
    "pytest",
#    "pytest-cov",
    "tox",
]
docs = [  # TODO: not decided yet
    "sphinx",
    "sphinx-argparse-cli",
    "sphinx-markdown-builder",
]

[tool.black]
line-length = 88

[project.scripts]
probely = "probely_cli.cli:app"
# TODO
#[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

#[tool.hatch.build.targets.wheel]
#packages = ["src/probely_cli"]
